<resources>
    <string name="app_name">爱拍原创</string>
    <string name="hello_world">Hello world!</string>
    <string name="content_description">Image not found</string>
    <string name="umeng_channel">官方</string>
    <string name="version_category">正式版</string>
    <string name="tab_dynamic">动态</string>
    <string name="tab_discover">推荐</string>
    <string name="tab_im">Hi</string>
    <string name="tab_mine">我的</string>
    <string name="tab_search">搜索</string>
    <string name="tab_live_broadcast">直播</string>
    <string name="tab_rank_list">榜单</string>
    <string name="network_loading">正在请求数据...</string>
    <string name="netword_error">加载失败，请稍后再试</string>
    <string name="refresh_success">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="loading_error">加载失败, </string>
    <string name="loading_retry">重新载入>> </string>
    <string name="lading_error_btn_retry">刷新</string>
    <string name="network_unconnected">重新连接</string>
    <string name="loading_no_more_data">到底了</string>
    <string name="network_request_fail">请求失败</string>
    <string name="no_channel_data_hint">该专区暂未开放，你可以到首页逛逛吧！</string>
    <string name="no_network">当前无网络连接</string>
    <string name="dialog_no_network">木有网络连接，检查一下吧！</string>
    <string name="dialog_check_network">检查网络设置</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_no_wifi">当前为非WIFI网络，是否继续播放？</string>
    <string name="dialog_continue">继续</string>
    <string name="no_network_hint">似乎网络中断了哦~</string>
    <string name="mobile_network_hint">WIFI网络已断开，即将使用2G/3G/4G网络播放</string>
    <string name="switch_to_wifi_hint">检测到WIFI网络，已自动为你切换</string>
    <string name="network_retry_again">网络不给力，再来一次吧！</string>
    <string name="loading_hint">正在加载...</string>
    <string name="slidingmenu_about">关于爱拍原创®</string>
    <string name="slidingmenu_top_title">更多专区</string>
    <string name="slidingmenu_recommend_install">拍友推荐</string>
    <string name="slidingmenu_login_account">拍子号/邮箱</string>
    <string name="slidingmenu_login_password">密码</string>
    <string name="slidingmenu_login">登录</string>
    <string name="slidingmenu_regist">快速注册</string>
    <string name="slidingmenu_qq_login">QQ登录</string>
    <string name="slidingmenu_forget_password">忘记密码</string>
    <string name="slidingmenu_please_input_account">请输入拍子号/邮箱/手机号</string>
    <string name="slidingmenu_please_input_password">请输入密码</string>
    <string name="slidingmenu_logining">登录中...</string>
    <string name="slidingmenu_account_error">账号输入有误</string>
    <string name="slidingmenu_login_fail_times">失败次数过多，请稍后登录。</string>
    <string name="slidingmenu_login_fail">登录失败</string>
    <string name="slidingmenu_login_request_fail">网络连接失败</string>
    <string name="activity_about_title">关于DNF视频秀</string>
    <string name="about">爱拍原创是中国最大的达人原创视频社区、最好的视频创作软件“拍大师”官网，分享快乐的第一品牌！</string>
    <string name="version_code">版本：1.0.0</string>
    <string name="company_name">©广州爱拍网络科技有限公司</string>
    <string name="company_net_address">www.aipai.com</string>
    <string name="copyrightURL">http://www.aipai.com</string>
    <string name="exit_dialog_hint">你确定退出 爱拍原创？</string>
    <string name="exit_dialog_yes">退出</string>
    <string name="exit_dialog_no">取消</string>
    <string name="crash_dialog_title">数据错误</string>
    <string name="crash_dialog_message">更新发生错误，是否发送错误信息？</string>
    <string name="crash_dialog_negative_button">忽略</string>
    <string name="crash_dialog_positive_button">发送</string>
    <string name="download_failed_dialog_title">下载失败</string>
    <string name="download_failed_dialog_message">无法下载更新文件，是否重试？</string>
    <string name="download_failed_dialog_negative_button">忽略</string>
    <string name="download_failed_dialog_positive_button">重试</string>
    <string name="update_dialog_title">可用更新</string>
    <string name="update_dialog_message">是否显示更新信息？</string>
    <string name="update_dialog_negative_button">忽略</string>
    <string name="update_dialog_positive_button">显示</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="btn_updata">更新</string>
    <string name="download_cancle_dialog_message2">确定要取消更新下载？</string>
    <string name="update_dialog_confirm">更新</string>
    <string name="no_media_player">没法播放，请先安装视频播放器</string>
    <string name="no_browser">请先安装浏览器</string>
    <string name="videoplay_exit_pressed_twice">再次按下返回键返回</string>
    <string name="videoplay_MP4_NORMAL">流畅</string>
    <string name="videoplay_MP4_HD">标清</string>
    <string name="videoplay_MP4_HD2">高清</string>
    <string name="videoplay_MP4_HD_720">高清</string>
    <string name="videoplay_MP4_HD_1080">超清</string>
    <string name="video_noError_hint">连接异常，正在重新连接...</string>
    <string name="search_activity_btn">搜</string>
    <string name="search_activity_no_result">没有找到结果，请换个关键词试试吧</string>
    <string name="search_activity_no_key_word">请输入关键字</string>
    <string name="search_key_word_activity_title">搜索</string>
    <string name="search_result_activity_title">搜索</string>
    <string name="search_search_type_mobile">手游</string>
    <string name="search_search_type_pc">PC原创</string>
    <string name="recommend_install_activity_title">拍友推荐</string>
    <string name="recommend_install_activity_app_paidashi">拍大师</string>
    <string name="recommend_install_activity_app_paidashi_sort">视频录像</string>
    <string name="recommend_install_activity_app_paidashi_size">15.4M</string>
    <string name="recommend_install_activity_app_paidashi_introduction">最流行的移动视频创作工具。功能十分简单好用：屏幕录像、摄像头录像、快速视频剪辑、酷炫滤镜特效、一键轻松分享等。</string>
    <string name="recommend_install_activity_app_paidashi_download_url">http://update.lieyou.com/apps/com.aipai.paidashi/android/version/paidashi.apk</string>
    <string name="recommend_install_activity_app_paidashi_package_name">com.aipai.paidashi</string>
    <string name="recommend_install_activity_app_lieyou">猎游</string>
    <string name="recommend_install_activity_app_lieyou_sort">游戏市场</string>
    <string name="recommend_install_activity_app_lieyou_size">3.8</string>
    <string name="recommend_install_activity_app_lieyou_introduction">靠谱找手游第一APP！新游热游每日速递、高速下载直达游戏、观享最酷手游达人精彩视频——找手游不再坑爹。</string>
    <string name="recommend_install_activity_app_lieyou_download_url">http://update.lieyou.com/apps/com.lieyou.android/android/version/LieYou.apk</string>
    <string name="recommend_install_activity_app_lieyou_package_name">com.lieyou.android</string>
    <string name="recommend_insatll_activity_app_download">下载</string>
    <string name="recommend_insatll_activity_app_open">打开</string>
    <string name="recommend_install_activity_app_install">安装</string>
    <string name="recommend_install_activity_download_fail">下载失败</string>
    <string name="recommend_install_activity_start_download">开始下载</string>
    <string name="recommend_install_activity_app_downloading">下载中</string>
    <string name="recommend_install_activity_toast_downloading">正在下载</string>
    <string name="menu_home">回到App首页</string>
    <string name="menu_recommend">拍友推荐</string>
    <string name="menu_about">关于我们</string>
    <string name="menu_haozhaoli">玩家号召力榜</string>
    <string name="menu_signin">签到领奖</string>
    <string name="menu_annual_reward">风云榜评选</string>
    <string name="menu_disable_push_msg">关闭消息推送</string>
    <string name="menu_enable_push_msg">开启消息推送</string>
    <string name="menu_toast_disable_push_msg">关闭成功</string>
    <string name="menu_toast_enable_push_msg">开启成功</string>
    <string name="menu_exit">退出爱拍原创</string>
    <string name="video_detail_activity_title">视频播放</string>
    <string name="video_detail_activity_load_error">加载失败，点击刷新</string>
    <string name="video_detail_activity_no_comment">暂无评论</string>
    <string name="video_detail_activity_tab2">相关推荐</string>
    <string name="video_detail_activity_tab3">评论</string>
    <string name="video_detail_activity_second">秒</string>
    <string name="video_detail_activity_notice_board">手机端暂未开放送花、送礼、打赏等功能，请访问爱拍网站www.aipai.com使用。</string>
    <string name="video_detail_activity_btn_comment">评论</string>
    <string name="video_detail_activity_comment_empty">评论内容不能为空</string>
    <string name="video_detail_activity_comment_too_short">你输入的文字太少</string>
    <string name="video_detail_activity_comment_too_long">你输入的文字超过了500个</string>
    <string name="video_detail_activity_comment_success">评论成功</string>
    <string name="video_detail_activity_reply_success">回复成功</string>
    <string name="video_detail_activity_reply">回复</string>
    <string name="video_detail_activity_comment_hint">说点什么</string>
    <string name="video_detail_activity_get_paidan_fail">获取收藏失败</string>
    <string name="video_detail_activity_collection_success">收藏成功</string>
    <string name="video_detail_activity_remove_collection_success">移除成功</string>
    <string name="video_detail_activity_collection_fail">收藏失败！</string>
    <string name="video_detail_activity_dialog_title_flower">送花</string>
    <string name="video_detail_activity_dialog_recharge">充值</string>
    <string name="video_detail_activity_dialog_btn_cancle">取消</string>
    <string name="video_detail_activity_send_flower_success">送花成功</string>
    <string name="video_detail_activity_send_flower_fail_7501">你的鲜花道具已经过期了喔!</string>
    <string name="video_detail_activity_send_flower_fail_7500">还木有选择送花数量哦！</string>
    <string name="video_detail_activity_send_flower_fail_7505">你还没有鲜花道具呢!</string>
    <string name="video_detail_activity_send_flower_fail_7506">不能给自己的作品送鲜花喔^^!</string>
    <string name="video_detail_activity_send_flower_fail_other">网络不给力，再来一次吧!</string>
    <string name="video_detail_activity_send_reward">打赏</string>
    <string name="video_detail_activity_send_reward_success">打赏成功</string>
    <string name="video_detail_activity_send_reward_fail">打赏失败</string>
    <string name="video_detail_activity_add_idol_success">添加粉丝成功</string>
    <string name="video_detail_activity_add_idol_fail">添加粉丝失败</string>
    <string name="video_detail_activity_dialog_add_idol_success_btn_confirm">管理偶像</string>
    <string name="video_detail_activity_dialog_add_idol_success_btn_cancel">返回</string>
    <string name="video_detail_activity_dialog_add_idol_success">加入粉丝成功。</string>
    <string name="video_detail_activity_dialog_add_idol_club_hint">单次打赏≥5000可自动成为铁杆粉丝！</string>
    <string name="video_detail_activity_dialog_add_paidan_success">成功把作品加入收藏</string>
    <string name="video_detail_activity_dialog_add_paidan_fail">加入收藏失败</string>
    <string name="video_detail_activity_dialog_paidan_btn_yes">查看收藏</string>
    <string name="video_detail_activity_dialog_paidan_btn_no">返回播放</string>
    <string name="video_detail_activity_dialog_share_title">分享</string>
    <string name="video_detail_activity_dialog_share_qzone">QQ空间</string>
    <string name="video_detail_activity_dialog_share_weixin">微信好友</string>
    <string name="video_detail_activity_dialog_share_weixin_circle">微信朋友圈</string>
    <string name="video_detail_activity_dialog_share_qq">QQ好友</string>
    <string name="video_detail_activity_dialog_share_sina_weibo">新浪微博</string>
    <string name="video_detail_activity_dialog_share_tecent_weibo">腾讯微博</string>
    <string name="video_detail_activity_keyboard_comment_hint">我有话要讲···</string>
    <string name="video_detail_activity_dialog_share_success">分享成功</string>
    <string name="video_detail_activity_dialog_share_fail">分享失败</string>
    <string name="video_detail_activity_dialog_share_cancel">分享取消</string>
    <string name="video_detail_activity_dialog_share_ing">分享中...</string>
    <string name="video_detail_activity_dialog_share_fail_5005">访问频率超限，可一会儿再试</string>
    <string name="video_detail_activity_dialog_share_fail_5016">分享信息重复</string>
    <string name="login_activity_account">手机/邮箱/爱拍号</string>
    <string name="login_activity_password">密码</string>
    <string name="login_activity_login_btn_text">登录</string>
    <string name="login_via_third">第三方账号登录</string>
</resources>