<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff5f5f5"
                android:padding="10dp">

    <LinearLayout
        android:id="@+id/ll_edit_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/ll_edit_zone_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/login_activity_account"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#ff000000"
                android:textColorHint="#CBBAAF"/>

            <ImageView
                android:id="@+id/iv_clear_edittext_content_0"
                style="@style/clear_edittext_context"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"/>
        </RelativeLayout>

        <View
            android:id="@+id/line1"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#cbcbcb"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/login_activity_password"
                android:inputType="textPassword"
                android:maxLength="32"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#ff000000"
                android:textColorHint="#CBBAAF"/>

            <ImageView
                android:id="@+id/iv_clear_edittext_content_1"
                style="@style/clear_edittext_context"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_edit_zone"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector_ffffff_fec200_dis_d6d6d6_5_stroke_fec200"
        android:gravity="center"
        android:padding="@dimen/btn_normal_padding"
        android:text="@string/login_activity_login_btn_text"
        android:textColor="@color/color_selector_fec200_ffffff"
        android:textSize="@dimen/btn_normal_text_size"/>

    <TextView
        android:id="@+id/tv_login_via_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:text="@string/login_via_third"
        android:textColor="#999999"
        android:textSize="15sp"/>

    <LinearLayout
        android:id="@+id/ll_login_via_third_btns"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login_via_third"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_wx_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_circle_ffffff_e5e5e5_61"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginRight="@dimen/dp_54"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/about"
                android:src="@drawable/wechat_login_head"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_qq_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_circle_ffffff_e5e5e5_61"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/about"
                android:src="@drawable/qq_login_head"/>

            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:text="@string/login_via_qq"-->
            <!--android:textColor="@color/color_selector_62befe_ffffff"-->
            <!--android:textSize="15sp"/>-->
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_sina_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_circle_ffffff_e5e5e5_61"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:layout_marginLeft="@dimen/dp_54"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/about"
                android:src="@drawable/sina_login_head"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:text="@string/slidingmenu_forget_password"
        android:textColor="@color/color_selector_999999_fec200"
        android:textSize="15sp"/>

</RelativeLayout>